polish core model validation tests